Thu Jun  6 18:10:45  Steve Huston  <shuston@riverace.com>

        * ace/README: Removed ACE_HAS_OPTIMIZED_MESSAGE_QUEUE. No configs
          use it, and it's functionality doesn't really support the
          message queue deactivation/pulse semantics.

        * ace/Message_Queue.h:
        * ace/Message_Queue_T.{h cpp i}: Removed the "int pulse" argument
          from deactivate() and add a pulse() method.  States stay the
          same.
          Took out all the ACE_HAS_OPTIMIZED_MESSAGE_QUEUE stuff.  It's
          not used any longer.

        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp: Use the pulse()
          method instead of deactivate (1).

        * examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Removed answered
          questions.  Removed reimplemented handle_connect() method
          because the needed things are now available via the framework.

        * ace/Asynch_Acceptor.{h cpp}:
        * ace/Asynch_Connector.{h cpp}: Added new hook method,
          int validate_connection (const ACE_Asynch_Accept::Result&result,
            const ACE_INET_Addr& remote_addr, const ACE_INET_Addr& local_addr)
          that allows access to success/fail, handle, and addresses.  The
          validate_new_connection (const ACE_INET_Addr&) method is now
          deprecated.

        * ace/WFMO_Reactor.{h cpp} (ACE_WFMO_Reactor_Notify): Add an
          optional argument to ACE_WFMO_Reactor_Notify constructor.
          size_t max_notifies is used to specify a limit for how many
          notifications can be queued. The value is used to calculate
          new high and low watermarks to the message_queue_. Default 1024.

        * ace/Activation_Queue.cpp:
        * ace/Message_Block.cpp:
        * ace/Message_Queue_T.cpp: Added #include "ace/Log_Msg.h" to get
          the ACE_DEBUG, etc. definitions.

        * ace/Read_Buffer.cpp: Added #include for ace/Log_Msg.h and
          ace/Malloc_Base.h (for ACE_Allocator).
